<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="formmicrologger_preferences" android:title="@string/pref_autosend_title" android:summary="@string/pref_autosend_summary">


        <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
            android:enabled="false"
            android:defaultValue="true"
            android:key="autosend_enabled"
            android:title="@string/autosend_enabled"
            android:summary="@string/autosend_enabled_summary"/>


        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:enabled="false"
            android:key="autosend_frequency_minutes"
            android:title="@string/autosend_frequency"
            android:summary="@string/autosend_frequency_summary"
            android:numeric="integer"
            android:maxLength="4"
            android:defaultValue="15"
            android:hint="@string/autosend_frequency_hint"
            />

    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
        android:enabled="false"
        android:key="autosend_frequency_whenstoppressed"
        android:defaultValue="false"
        android:title="@string/autoemail_frequency_whenistop"

        />

    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
        android:enabled="false"
        android:key="autosend_sendzip"
        android:defaultValue="false"
        android:title="@string/autosend_sendzip_title"
        android:summary="@string/autosend_sendzip_summary"/>

    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
        android:key="autosend_wifionly"
        android:defaultValue="false"
        android:enabled="false"
        android:title="@string/autosend_wifionly_title" />

    <PreferenceCategory android:title="@string/autosend_targets_category">


        <Preference
            android:enabled="false"
            android:title="@string/gdocs_setup_title"
            android:key="gdrive_setup">
        </Preference>
        <Preference

            android:enabled="false"
            android:title="@string/dropbox_setup_title"
            android:key="dropbox_setup">
        </Preference>
        <Preference
            android:enabled="false"
            android:title="@string/sftp_setup_title"
            android:key="sftp_setup">
        </Preference>
        <Preference
            android:enabled="false"
            android:title="@string/opengts_setup_title"
            android:key="opengts_setup">
        </Preference>
        <Preference
            android:enabled="false"
            android:title="@string/osm_setup_title"
            android:key="osm_setup">
        </Preference>
        <Preference
            android:enabled="false"
            android:title="@string/autoemail_title"
            android:key="autoemail_setup">
        </Preference>
        <Preference
            android:enabled="false"
            android:title="@string/owncloud_setup_title"
            android:key="owncloud_setup">
        </Preference>
        <Preference
            android:enabled="true"
            android:title="@string/autoftp_setup_title"
            android:key="autoftp_setup">
        </Preference>


    </PreferenceCategory>


</PreferenceScreen>