<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="formmicrologger_preferences">


    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
        android:defaultValue="1"
        android:enabled="false"

        android:key="startonbootup"
        android:summary="@string/startonbootup_summary"
        android:title="@string/startonbootup_title" />
    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
        android:defaultValue="1"
        android:enabled="false"
        android:title="@string/startonapplaunch_title"
        android:summary="@string/startonapplaunch_summary"
        android:key="startonapplaunch"/>

    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
        android:defaultValue="0"
        android:enabled="false"
        android:title="@string/display_imperial_title"
        android:summary="@string/display_imperial_summary"
        android:key="useImperial"/>

    <com.afollestad.materialdialogs.prefs.MaterialListPreference

        android:enabled="false"
        android:key="coordinatedisplayformat"
        android:title="@string/coordinate_display_format"
        />

    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference
        android:defaultValue="1"
        android:enabled="false"
        android:title="@string/hide_notification_buttons"
        android:summary="@string/restart_required"
        android:key="hide_notification_buttons"
        />
    <com.formmicro.gpslogger.ui.components.CustomSwitchPreference

        android:enabled="false"
        android:title="@string/hide_notification_from_status_bar"
        android:summary="@string/restart_required"
        android:key="hide_notification_from_status_bar"
        android:defaultValue="false"
        />
    <!--<Preference-->
        <!--android:title="@string/enabledisablegps_title"-->
        <!--android:summary="@string/enabledisablegps_summary"-->
        <!--android:key="enableDisableGps"-->
        <!--android:defaultValue="false"/>-->

    <!--<com.formmicro.gpslogger.ui.components.CustomSwitchPreference-->
        <!--android:title="@string/debuglog_title"-->
        <!--android:summary="@string/debuglog_summary"-->
        <!--android:key="debugtofile"-->
        <!--android:defaultValue="false"/>-->

    <!--<Preference-->
        <!--android:title="@string/debuglog_attach_to_email"-->
        <!--android:summary="@string/debuglog_attach_to_email_summary"-->
        <!--android:key="debuglogtoemail"-->
        <!--android:enabled="true"/>-->


    <com.afollestad.materialdialogs.prefs.MaterialListPreference
        android:key="changelanguage"
        android:title="@string/change_language_title"
        android:summary="@string/change_language_summary"
        android:icon="@drawable/translate"
        />



    <!--<Preference android:key="about_version_info"></Preference>-->

    <!--<Preference-->
        <!--android:key="formmicrologger_privacypolicy"-->
        <!--android:title="@string/privacy_policy">-->
        <!--<intent android:action="android.intent.action.VIEW"-->
                <!--android:data="https://github.com.formmicro.gpslogger/blob/master/assets/text/privacypolicy.md#privacy-policy"/>-->
    <!--</Preference>-->

    <!--<Preference-->
        <!--android:key="formmicrologgerdonate_link"-->
        <!--android:title="@string/tip_coffee"-->
        <!--android:icon="@drawable/coffee" >-->
        <!--<intent android:action="android.intent.action.VIEW"-->
                <!--android:data="market://details?id=com.formmicro.gpsloggerpro" />-->
    <!--</Preference>-->

    <!--<Preference-->
        <!--android:key="gpsvisualizer_link"-->
        <!--android:title="@string/pref_gpsvisualizer"-->
        <!--android:summary=""-->
        <!--android:icon="@drawable/gpsvisualizer"/>-->

    <!--<Preference-->
        <!--android:key="formmicrologger_repo"-->
        <!--android:title="Source Code"-->
        <!--android:icon="@drawable/github"-->
        <!--&gt;-->
        <!--<intent android:action="android.intent.action.VIEW"-->
                <!--android:data="https://github.com.formmicro.gpslogger/"/>-->
    <!--</Preference>-->

    <!--<Preference-->
        <!--android:key="formmicrologger_crowdin"-->
        <!--android:title="Translations"-->
        <!--&gt;-->
        <!--<intent android:action="android.intent.action.VIEW"-->
                <!--android:data="https://crowdin.com/project/formmicrologger-for-android"/>-->
    <!--</Preference>-->

    <!--<Preference-->
        <!--android:key="formmicrologger_thirdparty"-->
        <!--android:title="Open Source Libraries">-->
        <!--<intent android:action="android.intent.action.VIEW"-->
                <!--android:data="https://github.com.formmicro.gpslogger/blob/master/assets/text/opensource.md#open-source-libraries"/>-->
    <!--</Preference>-->


</PreferenceScreen>